--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
+  google_sign_in: ^5.2.4
+  cloud_firestore: ^3.1.10
+  firebase_storage: ^10.2.9
+  firebase_auth: ^3.3.9
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +57,10 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   uses-material-design: true
+  fonts:
+    - family: Signatra
+      fonts:
+        - asset: assets/fonts/Signatra.ttf
   assets:
     - assets/images/
   #   - images/a_dot_ham.jpeg
