--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   http:
+  duration_picker_dialog_box: 
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
   google_sign_in: ^5.2.4
