--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   http:
   duration_picker_dialog_box: 
+  flutter_slidable: ^1.2.0
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
   google_sign_in: ^5.2.4
