--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,9 @@ dependencies:
   firebase_storage: ^10.2.9
   firebase_auth: ^3.3.9
   charts_flutter: ^0.12.0
-  sembast: ^3.2.0
   path_provider: ^2.0.9
+  hive: ^2.0.6
+  flutter_tts: ^3.3.3
 
 dev_dependencies:
   flutter_test:
