--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   path_provider: ^2.0.9
   hive: ^2.0.6
   flutter_tts: ^3.3.3
+  speech_balloon: ^0.0.4
+  flutter_mobile_vision_2: ^0.1.13
 
 dev_dependencies:
   flutter_test:
