--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.16.0 <3.0.0"
 dependencies:
+  flutter_launcher_icons: ^0.9.2
   camera: ^0.9.4+5
   flutter:
     sdk: flutter
@@ -32,6 +33,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+
+flutter_icons:
+  image_path: "assets/images/Panda.png" 
+
 flutter:
   uses-material-design: true
   fonts:
