--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
   http:
   duration_picker_dialog_box: 
   flutter_slidable: ^1.2.0
-  #vibration: ^1.7.3
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
   google_sign_in: ^5.2.4
@@ -28,6 +27,7 @@ dependencies:
   flutter_tts: ^3.3.3
   speech_balloon: ^0.0.4
   flutter_mobile_vision_2: ^0.1.13
+  flutter_vibrate: ^1.3.0
 
 dev_dependencies:
   flutter_test:
