--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
   google_sign_in: ^5.2.4
+  google_fonts: ^2.3.1
   cloud_firestore: ^3.1.10
   firebase_storage: ^10.2.9
   firebase_auth: ^3.3.9
@@ -28,6 +29,7 @@ dependencies:
   speech_balloon: ^0.0.4
   flutter_mobile_vision_2: ^0.1.13
   flutter_vibrate: ^1.3.0
+  
 
 dev_dependencies:
   flutter_test:
